src/test/resources/tokens/invalid/integer_out_of_bounds_positive_hex.unpick
unpick v3
group int
    0x100000000